# haskell-lectures-2026

./: L01.Intro.lhs  L01.Intro.md  L02.Typeclass.lhs  L02.Typeclass.md  L03.Containers.lhs  L03.Containers.md  L04.Monads.lhs  L04.Monads.md  L05.IO.md  L05.cabal  L05_IO.lhs  L06.STM.md  L06_STM.lhs  L07.Transformers.md  L11_Generics.hs  L12_Refinements.hs  L13_ST.hs  L13_Typeable.hs  L14.Exceptions.md  L14_Exceptions.lhs  L15_Lenses.hs  L16.FFI.md  L16_FFI.c  L16_FFI.lhs  L17.FRP.md  L17_FRP.lhs  L18_Streaming.hs  cabal.project  composition.hs  lectures.cabal  list_transformer.hs
L06_executables/: L06.cabal  locking_hash.hs  parallel_naive_fib.hs  simple_hash.hs  stm_example.hs
