cabal-version: 3.0
name:          lectures
version:       0.1

common stanzas
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Werror=all -pgmL markdown-unlit

library L05-IO
  import:          stanzas
  exposed-modules: L05_IO
  build-depends:   base, falsify, random, selective

library L06-STM
  import:          stanzas
  exposed-modules: L06_STM
  build-depends:   base, bytestring, pureMD5, stm
